# final-project-Schelbert197

./: .gitignore  README.md  hangman.py
apriltag_trial/apriltag_trial/: hangman.py
box_adder_interfaces/: CMakeLists.txt  package.xml
box_adder_interfaces/srv/: Box.srv
brain_interfaces/: CMakeLists.txt  package.xml
brain_interfaces/msg/: Cartesian.msg  EEForce.msg  JointTrajectories.msg  LetterMsg.msg
brain_interfaces/srv/: BoardTiles.srv  Box.srv  Cartesian.srv  ExecuteJointTrajectories.srv  MoveJointState.srv  MovePose.srv  Replan.srv  UpdateTrajectory.srv
character_interfaces/: package.xml  setup.cfg  setup.py
character_interfaces/character_interfaces/: alphabet.py
docs/: drawing.draw.html  drawing.hangman.html  drawing.html  drawing.image_modification.html  drawing.kickstart.html  drawing.paddle_ocr.html  drawing.send_trajectories.html  drawing.tags.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js
docs/_sources/: drawing.grid.rst.txt  drawing.rst.txt  (+2 more)
drawing/: package.xml  setup.cfg  setup.py
force_msgs/: CMakeLists.txt  package.xml
gameplay_interfaces/: CMakeLists.txt  package.xml
gripper/: gripper_params.txt
joint_interfaces/: CMakeLists.txt  package.xml
ocr/: README.md  package.xml  setup.cfg  setup.py
path_planner/: package.xml  setup.py
pickmeup/: package.xml  setup.cfg  setup.py
read_ee_force/: CMakeLists.txt  package.xml
read_ee_force/include/read_ee_force/: GravityCompensator.h  JointLimitAvoidance.h  MovingAverageFilter.h  examples_common.cpp  examples_common.h  netft_node.cpp  netft_rdt_driver.cpp  netft_rdt_driver.h  utils.hpp
read_ee_force/src/: read_ee_force.cpp
(+83 files in other folders)
